--- a/agile.html
+++ b/agile.html
@@ -1,8 +1,7 @@
 assdgugijp[l[;]
 'juyfh;'kok<html>
 <body>
-<form>
-	FIRST NAME:<input type="text" id="text1"><br><br><br>
+<form
 	LAST NAME:<input type="text" id="text2"><br><br>
 	EMAIL ID:<input type="email" id="text3"><br><br>
 	PASSWORD:<input type="password" id="pwd"><br><br>
