--- a/agile.html
+++ b/agile.html
@@ -2,8 +2,7 @@ assdgugijp[l[;]
 'juyfh;'kok<html>
 <body>
 <form
-	LAST NAME:<input type="text" id="text2"><br><br>
-	EMAIL ID:<input type="email" id="text3"><br><br>
+	LAST NAME:<input type
 	PASSWORD:<input type="password" id="pwd"><br><br>
 	<input type="radio" id="i1" name="gender" value="female">female
 	<input type="radio" id="i2" name="gender" value="male">male<br><br>
