--- a/agile.html
+++ b/agile.html
@@ -1,9 +1,6 @@
 assdgugijp[l[;]
 'juyfh;'kok<html>
-<body>
-<formdfdgffyjk
-	LAST NAME:<input type
-	PASSWORD:<input type="password" id="pwd"><br><br>
+<body
 	<input type="radio" id="i1" name="gender" value="female">female
 	<input type="radio" id="i2" name="gender" value="male">male<br><br>
 	DOOR NUMBER & STREET:<input type="text" id="text6" onchange="area()" ><br><br>
